# AgentMemoryLab

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py
docs/: architecture.md  project_structure.md
src/: clients.py
src/agent/: BaseAgent.py  SupervisorAgent.py  __init__.py  base.py  supervisor.py
src/agents/: __init__.py  base.py  consolidator.py  drafter.py  fact_critic.py  planner.py  reflection.py  style_critic.py  summarizer.py  supervisor.py
src/config/: clients.py  settings.py
src/data/: chat_history.db
src/data/chroma_db/: chroma.sqlite3
src/memory/: episodic.py  semantic.py  service.py  summarizer.py  vector_store.py
src/pipelines/: story_pipeline.py
src/utils/: embeddings.py  logger.py  token_counter.py
tests/: test_chat_history.py  test_draft_agent.py  test_full_workflow.py  test_reflection.py  test_style_critic_agent.py
