[project]
name = "agentmemorylab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.5",
    "httpx>=0.28.1",
    "openai[aiohttp]>=2.29.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
]
